--- a/main.css
+++ b/main.css
@@ -1,13 +1,19 @@
-body {    
+body {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    border: 0px solid black;
+}
+
+main {    
+    position: absolute;
+    top: calc(50% - 300px);
+    left: calc(50% - 400px);
     display: inline-block;
     width: 800px;
-    height: 600px;
-    margin-left: calc(50% - 400px);
-    margin-top: 150px;
+    height: 600px;    
     background-image: url(./sign-up.jpg);
-    background-repeat: no-repeat;
-    
-    background-position: 50% 150px;    
+    background-repeat: no-repeat;         
     border: 0px solid red;
 }
 
@@ -17,6 +23,7 @@ body {
     height: 375px;
     margin-top: 111px;
     margin-left: 75px;
+    position: relative;
     border: 0px solid blue;
 }
 
@@ -34,12 +41,13 @@ div > a {
     color: white;
     font-size: 13px;
     font-weight: 100;
-    vertical-align: bottom;
-    border: 0px solid blue;   
-    margin-top: calc(100% - 10px);
-    
+    vertical-align: bottom;    
     margin-left: 30px;
-    
+    margin-bottom: 10px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    border: 0px solid blue; 
 }
 
 form {    
